# FreeAIAsistant

./: .gitignore  README.md  main.py  requirements.txt  test.py
configs/: __init__.py
db/: DataBase.db  PgDB_connect.py  PgDB_connection.py  Postgres_queries.py  __init__.py  db_manager.py  history_table.py  history_table_queries.py  postgres_queries.py  table_history.py  table_usersettings.py  users_model_table.py
handlers/: __init__.py  admin_handlers.py  base_handlers.py  files_hadler.py  history_hadlers.py  messages_handlers.py  models_handlers.py  photo_handlers.py
logs/: events_logging.py
pyconfig/: pyproject.toml  requirements.txt
settings/: DB_connect.py  buttons.py  config.py  correct_messages.py  db_history.py  db_model.py  messages.py  read_files.py  translate.py
testing/: db_history.py  db_model.py
user_files/: file_reader.py
utils/: PgDB_connect.py  ai_requests.py  buttons.py  correct_messages.py  decorators.py  keyboard_utils.py  messages.py  read_files.py
